# streamlit-boilerplate

./: Dockerfile  Makefile  README.md  main.py  mypy.ini  pyproject.toml
.streamlit/: config.toml
countries/: Dockerfile  Makefile
countries/tests/: test_main.py
resources/: countries.json
src/delivery/streamlit/: app.py
src/delivery/streamlit/components/: button.py  countries_list.py  header.py  image.py  text.py  title.py
src/domain/: component.py  countries_client.py  country.py  query.py
src/infrastructure/countries/: dummy_countries_client.py  http_countries_client.py  json_countries_client.py
src/use_cases/: get_all_countries_query.py
tests/: test_main.py
tests/integration/countries/: test_countries_client_integration.py  test_http_countries_client_integration.py  test_json_countries_client_integration.py
tests/unit/delivery/streamlit/: test_streamlit_app.py
tests/unit/delivery/streamlit/components/: test_button.py  test_countries_list.py  test_header.py  test_text.py  test_title.py
tests/unit/use_cases/: test_get_all_countries_handler.py
