[project]
name = "streamlit-boilerplate"
version = "0.1.0"
description = "This repository is a Streamlit boilerplate to be used as a fast starter point"
authors = [
  { name = "Pedro López Mareque", email = "pedro.lopez.mareque@gmail.com" }
]
requires-python = "==3.12.8"
readme = "README.md"
dependencies = [
    "streamlit>=1.38.0,<2",
    "watchdog>=4.0.0,<5",
    "requests>=2.32.3,<3",
]

[dependency-groups]
test = [
    "pytest>=8.3.3,<9",
    "pytest-xdist>=3.6.1,<4",
    "pytest-watch>=4.2.0,<5",
    "expects>=0.9.0,<0.10",
    "mypy>=1.11.2,<2",
    "ruff>=0.6.8,<0.7",
]

[tool.uv]
default-groups = ["test"]

[tool.pyright]
venvPath = "."
venv = ".venv"
